
--Fixed vision 'leak' through diagonals.

--Fixed directions that animals face when they can't see you so that they don't
  suddenly jump orientations when they come into view.

--Added a club tool (bludgeon functionality of the crowbar, without the
  door-opening capabilities, allowing it to be cheaper).  Removed
  mostly-useless voltage detector to make room for it.





Version 16   Live Server Fixes

--Changed so that every house earns something in each pay interval (a minimum
  fraction of the maximum possible pay).

--Quadrupled all tool prices.

--Changed tool and tile prices according to a new four-tiered pricing model
  with a fixed build-cost/bypass-cost ratio for everything (pricing theory).

--Changed bypass-cost theory for mobile bottlenecks (pit bulls).  Direct
  bypass (gun) now costs 1x, and disabling (meat) costs 1/8x.





Version 16   2013-August-21

--Added support for web proxies (thanks Florian Yusuf Ali).

--Fixed visibility computation mismatch across platforms (caused by floating
  point round-off inconsistencies between platforms) by switching to an integer
  visibility computation.  This was causing server-side simulation of robberies
  to fail in rare cases (thanks Raymond Koo).

--Blocked quitting from game when quitting would kill player (during robbery
  and self-test).

--Animals now only follow or flee you if they can see you.

--Metal walls no longer conduct electricity.

--Removed wired wooden walls.

--Powered doors and trapdoors no longer pass power to neighboring objects.

--Added version of inicator lights that don't pass power.

--Game now runs in windowed mode by default, picking the largest window that
  fits comfortably on the user's screen.




Version 15   Live Server Fixes

--Fixed a potential deadlock involving house map cache flushing.

--Fixed unavoidable deadlock in endRobHouse by restarting transaction (thanks
  Colorfusion).

--Server now emails admin a report about each fatal error that occurs.
